# a2ui-sample

./: .gitignore  A2UI_implementation.md  README.md  a2ui-cc125a99-3a1e-4e51-b6f1-f610679e04ff.json  agent.py  debug_yfinance.py  list_models.py  llm_wrapper.py  main.py  models.py  pyproject.toml  run.sh  test_backend.py  test_llm_tool_selection.py  test_restaurant.py  test_stock.py  verify_chart_json.py  verify_shop_api.py
.terminai/: settings.json
app/api/: main.py
app/schemas/: models.py
app/services/: agent.py  llm_wrapper.py
app/templates/: place_list.json.j2  product_list.json.j2  stock_calendar.json.j2  stock_chart.json.j2  stock_dividends.json.j2  stock_fundamentals.json.j2  stock_holders.json.j2  stock_indicators.json.j2  stock_info.json.j2  stock_news.json.j2
static/: index.html  renderer.js
templates/: loan_result.json.j2  reservation_confirmed.json.j2  restaurant_list.json.j2  stock_chart.json.j2
test/: research_yfinance.py  test_backend.py  test_fundamentals.py  test_indicators.py  test_interaction_flow.py  test_llm.py  test_place_search.py  test_restaurant.py  test_sse_endpoint.py  test_stock.py  test_stock_info.py
